fixed image caroussel and some other layout issues

--- a/Desktop 3/styles.css
+++ b/Desktop 3/styles.css
@@ -180,9 +180,9 @@ hr {
 }
 .article {
     height: 50%;
-    width: 80%;
+    width: 70%;
     color: #a6adb4;
-    margin-top: 85px;
+    margin-top: 95px;
 }
 
 .article p {
